<resources>
    <string name="app_name">SPEED CALCULATOR</string>
    <string name="hint1">Enter distance(meter)</string>
    <string name="hint2">Enter time(second)</string>
    <string name="error1">Distance and time are required</string>
    <string name="error2">Time must be greater than zero</string>
    <string name="average">Average Speed (km/h)</string>
    <string name="clear">CLEAR</string>
    <string name="calculate">CALCULATE</string>
</resources>